[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/YellowObstacle.gd" type="Script" id=1]
[ext_resource path="res://YellowButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://YellowWall.tscn" type="PackedScene" id=3]

[node name="YellowObstacle" type="Node2D"]
script = ExtResource( 1 )

[node name="YellowButton" parent="." instance=ExtResource( 2 )]
position = Vector2( -2, -8 )

[node name="YellowWall" parent="." instance=ExtResource( 3 )]
position = Vector2( 60, -122 )

[connection signal="body_entered" from="YellowButton" to="." method="_on_YellowButton_body_entered"]
[connection signal="body_exited" from="YellowButton" to="." method="_on_YellowButton_body_exited"]
